tests/snapshots/run_wpt_conformance__coreml_gemm_two_float16_2D_tensors_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm two float16 2D tensors all options, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983284331_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[4, 3];
  }

  consts {
    operand_1: f16[5, 4] @bytes([201, 58, 228, 58, 202, 59, 154, 57, 61, 44, 93, 58, 94, 56, 180, 57, 177, 56, 10, 51, 97, 59, 249, 45, 64, 48, 18, 52, 220, 58, 92, 58, 205, 56, 193, 54, 14, 56, 63, 50]);
    operand_2: f16[3, 5] @bytes([85, 58, 243, 54, 237, 54, 209, 58, 8, 53, 141, 44, 10, 59, 189, 40, 129, 57, 200, 58, 224, 58, 145, 52, 25, 57, 208, 56, 191, 59]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=true, alpha=74.43204170482103, bTranspose=true, beta=62.01828598608989, c=2, label="");
  }

  outputs { gemmOutput; }
}
Error(s) occurred compiling MIL to BNNS graph:
[CreateBnnsGraphProgramFromMIL]: BNNS failed to compile due to an exception: Storage Reader expects file format version 2. at location 
 @ CreateBnnsGraphProgramFromMIL
