tests/snapshots/run_wpt_conformance__coreml_gemm_two_float16_2D_tensors_options_c_and_options_beta.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm two float16 2D tensors options.c and options.beta, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983283997_0_13C1E8FF-D5B9-4EF8-BAD3-8E91F736689B.mlmodelc/model.mil' with error code: -5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[3, 4];
  }

  consts {
    operand_1: f16[4, 5] @bytes([66, 55, 166, 57, 82, 55, 232, 52, 166, 54, 88, 52, 126, 52, 7, 54, 221, 51, 139, 52, 203, 57, 49, 56, 208, 57, 8, 56, 63, 45, 78, 53, 247, 50, 182, 47, 67, 49, 216, 50]);
    operand_2: f16[3, 5] @bytes([228, 57, 221, 58, 102, 59, 97, 59, 106, 59, 11, 54, 27, 53, 151, 51, 97, 58, 196, 44, 26, 57, 159, 54, 200, 57, 71, 59, 36, 58]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=false, alpha=1.0, bTranspose=false, beta=62.01828598608989, c=2, label="");
  }

  outputs { gemmOutput; }
}
Error(s) occurred compiling MIL to BNNS graph:
[CreateBnnsGraphProgramFromMIL]: BNNS failed to compile due to an exception: Storage Reader expects file format version 2. at location 
 @ CreateBnnsGraphProgramFromMIL
